# text-compressor-rs

./: .gitignore  Cargo.toml  README.md  test_data.txt
src/: main.rs  multi_thread.rs  server.rs  single_thread.rs
src/algorithms/: burrows_wheeler_run_length.rs  burrows_wheeler_transform.rs  huffman.rs  lempel_ziv_welch.rs  mod.rs  run_length_encoding.rs
src/api/: mod.rs  threader_cli.rs  threader_router.rs
src/data_structures/: mod.rs
src/dto/: mod.rs  request_dto.rs
src/errors/: app_error.rs
src/io/: args.rs  file.rs  mod.rs
src/models/: compression_metric.rs  mod.rs  part.rs  response.rs  threader.rs
src/models/dto/: mod.rs  request_dto.rs
src/pkg/: traits.rs
src/service/: mod.rs
src/service/algorithms/: burrows_wheeler_run_length.rs  burrows_wheeler_transform.rs  huffman.rs  huffman_encoding_run_length.rs  lempel_ziv_welch.rs  mod.rs  run_length_encoding.rs
src/service/data_structures/: huffman_node.rs  priority_queue.rs
src/service/io/: args.rs  file.rs  mod.rs
src/service/models/: compression_metric.rs  mod.rs
src/threading/: mod.rs  multi_thread.rs  single_thread.rs
src/utils/: utils.rs
