[package]
name = "text-compressor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-rt = "2.9.0"
actix-web = "4.4.0"
clap = { version = "4.4.6", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "^1", features = ["derive"] }
